# vipere-api

./: app.py  pyproject.toml  requirements.txt
kubernetes/: __init__.py  main.py  utils.py
kubernetes/config/: process.py
kubernetes/routers/: __init__.py  codefiles.py  datastores.py  issues.py  microservices.py  projects.py  users.py
kubernetes/schemas/: models.py  schemas.py
kubernetes/services/: api.py  aws.py  docker.py
