[tool.poetry]
name = "kubernetes"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.89.0"
aiodocker = "^0.21.0"
requests = "^2.28.1"
aioboto3 = "^10.3.0"
bs4 = "^0.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
